[package]
name = "tui-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version ="0.25.0", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive", "rc"] }
tui = "0.19.0"
