[package]
name = "tui-utils"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
crossterm = { version ="0.25.0", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive", "rc"] }
thiserror = "1.0.37"
shared_derive = { path = "shared_derive"}
ratatui = "0.20.0"
